--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
+    "nodemon": "^2.0.21",
     "validator": "^13.9.0"
   }
 }
